# NetworkAnalyticsPredictivePlatform

./: .gitignore  AGENT_STATE.md  MASTER_SPECIFICATION.md  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: pages.yml
analytics/: __init__.py
analytics/lineage/: __init__.py  fixtures.py  model.py  tracker.py
analytics/prioritization/: __init__.py  baseline.py  evaluation.py  model.py
apps/api/: __init__.py  demo_bundle.py  demo_security.py  fixture_loader.py  optional_api.py
apps/web/: README.md  app.mjs  index.html  server.mjs  styles.css
benchmarks/: core_cpu.py
data/contracts/: harbor-lantern-interchange-v1.schema.json
data/fixtures/: harbor-lantern.v1.json
db/: README.md
db/migrations/: 0001_initial.down.sql  0001_initial.sql  0002_jobs_and_staleness.down.sql  0002_jobs_and_staleness.sql  0003_security_identity_and_grants.down.sql  0003_security_identity_and_grants.sql
docs/architecture/: system-architecture.md
docs/deployment/: github-pages.md  secure-hybrid-demo.md
docs/evaluation/: accessibility-automation.md  cpu-feasibility-baseline.md  novice-overreliance-and-accessibility-protocol.md
docs/implementation/: expanded-nine-step-feature-plan.txt  full-flow-validation-audit.md  i2-better-ai-execution-checklist.md  phase-4-test-report.md  phase-4-vertical-slice.md  phase-b-storm-chart-workspace.md  step-8-9-ai-feature-implementation-brief.txt
docs/requirements/: financial-fraud-ring-use-case.md  phase-2-product-requirements.md
scripts/: build-pages.mjs  serve-pages.mjs  serve-web.mjs
tests/api/: __init__.py  (+5 more)
(+114 files in other folders)
