[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-analytics-predictive-platform"
version = "0.1.0"
description = "Evidence-first temporal criminal-network analysis workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "pyjwt[crypto]>=2.13,<3",
    "psycopg[binary,pool]>=3.2,<4",
    "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
include = ["apps*", "analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
